# chat-app

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
client/src/components/: channel_form.rs  chat.rs  contact.rs  header.rs  login.rs  message.rs  mod.rs  sidebar.rs
protocol/: Cargo.toml
protocol/src/: errors.rs  frame.rs  lib.rs
server/: Cargo.toml
server/src/: cli.rs  lib.rs  main.rs  server.rs
