[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
dioxus = "0.3.1"
dioxus-desktop = "0.3.0"
futures = "0.3.26"
tailwindcss-to-rust-macros = "0.1.2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
protocol = {path = "../protocol"}
fermi = "0.3.0"
